--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,15 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_dotenv: ^5.0.2
-  flutter_bloc: ^8.1.2
-  graphql: ^5.1.3
 
   chikoo_design_system:
     git:
       url: git@github.com:brandverse/chikoo-design-system.git
       ref: alpha
     # path: ../chikoo-design-system
+
+  chikoo_zindigi:
+    git:
+      url: git@github.com:brandverse/chikoo_zindigi.git
+      ref: alpha  
 
 dev_dependencies:
   flutter_test:
@@ -68,9 +70,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - .env
-    - .debug.env
+  # assets:
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
